# nanvix

./: .cargo  .dockerignore  .gdbinit  .gitignore  .gitmodules  .travis.yml  CNAME  CREDITS  Dockerfile  Dockerfile.tvci  Makefile  README  README.md  TODO  clippy.toml  documentation.html  doxygen.config  getting-started.html  index.html  license.html  makefile  nanvix.iso  news.html  quick-start.html  road-map.html  rustfmt.toml  virtual-machines.html
arch/: Cargo.toml
arch/.cargo/: config.toml
arch/src/: lib.rs  macros.rs
arch/src/x86/: dbg.rs  io.rs  mod.rs
arch/src/x86/cpu/: acpi.rs  cpuid.rs  eflags.rs  idt.rs  idtr.rs  ioapic.rs  madt.rs  mod.rs  pic.rs  pit.rs  ring.rs  tss.rs  xapic.rs
arch/src/x86/cpu/msr/: apic_base.rs
arch/src/x86/mem/: constants.rs  gdt.rs
arch/src/x86/mem/paging/: flags.rs  mod.rs  pde.rs  pte.rs
arch/src/x86/mem/paging/frame/: mod.rs  number.rs
benchmarks/boottime/: Cargo.toml  Makefile
benchmarks/boottime/src/: main.rs
benchmarks/echo/: Cargo.toml  Makefile
benchmarks/echo/src/: main.rs
daemons/init/: Cargo.toml  Makefile  targets
daemons/init/src/: lib.rs
daemons/memd/: Cargo.toml  Makefile
daemons/memd/.cargo/: config.toml
daemons/memd/src/: lib.rs  main.rs
daemons/procd/: Cargo.toml  Makefile
daemons/procd/src/: main.rs
daemons/testd/: Cargo.toml  Makefile
daemons/testd/src/: main.rs
daemons/testd/src/mm/: mod.rs
kcall/: Cargo.toml  README.md
kcall/src/: debug.rs  event.rs  ipc.rs  lib.rs  number.rs  pm.rs
kcall/src/arch/: x86.rs
kcall/src/mm/: access.rs  kcalls.rs  mod.rs
kernel/: .gdbinit  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
kernel/.cargo/: config.toml
kernel/src/: config.rs  debug.rs  error.rs  kargs.rs  kimage.rs  klog.rs  kmain.rs  kmod.rs  kpanic.rs  macros.rs  stdout.rs  uart.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86/: dbg.rs  io.rs
kernel/src/arch/x86/cpu/: acpi.rs  eflags.rs  excp.rs  idt.rs  idtr.rs  madt.rs
kernel/src/arch/x86/cpu/msr/: mod.rs
kernel/src/arch/x86/mem/: gdt.rs  gdtr.rs  mod.rs
kernel/src/arch/x86/mem/paging/: mod.rs  pde.rs  pte.rs
kernel/src/event/: manager.rs  mod.rs
kernel/src/event/kcall/: evctrl.rs  mod.rs  resume.rs  wait.rs
kernel/src/hal/: mod.rs
kernel/src/hal/arch/: mod.rs
kernel/src/hal/arch/x86/: hooks.S  mod.rs  start.S
kernel/src/hal/arch/x86/cpu/: acpi.rs  context.rs  idt.rs  madt.rs  mod.rs  pit.rs  tss.rs
kernel/src/hal/arch/x86/mem/: gdt.rs  mod.rs
kernel/src/hal/cpu/: mod.rs
kernel/src/hal/cpu/interrupt/: controller.rs  manager.rs  mod.rs
kernel/src/hal/io/: mod.rs
kernel/src/hal/io/mmio/: allocator.rs  mod.rs  region.rs
kernel/src/hal/io/pmio/: allocator.rs  info.rs  ioport.rs  mod.rs  typ.rs  width.rs
kernel/src/hal/mem/: mod.rs
kernel/src/hal/mem/types/: access.rs  mod.rs  region.rs
kernel/src/hal/mem/types/address/: frame.rs  mod.rs  page.rs  phys.rs  test.rs  virt.rs
kernel/src/io/: mod.rs
kernel/src/io/kcall/: ioattach.rs  iodetach.rs  mmio_alloc.rs  mmio_free.rs  mod.rs  pmio_alloc.rs  pmio_free.rs  pmio_read.rs  pmio_write.rs
kernel/src/ipc/: kcall.rs  manager.rs  mod.rs
kernel/src/ipc/mbx/: mailbox.rs  mod.rs
kernel/src/kcall/: dispatcher.rs  handler.rs  mod.rs
kernel/src/klib/: bitmap.rs  mod.rs  raw_array.rs  slab.rs
kernel/src/mboot/: acpi.rs  info.rs  memory_map.rs  mod.rs  module.rs
kernel/src/mm/: elf.rs  kheap.rs  mod.rs
kernel/src/mm/phys/: frame.rs  kpool.rs  manager.rs  mod.rs  upool.rs
kernel/src/mm/virt/: kpage.rs  manager.rs  mod.rs  upage.rs  vmem.rs
kernel/src/pm/: mod.rs
kernel/src/pm/kcall/: capctl.rs  getegid.rs  geteuid.rs  getgid.rs  getuid.rs  mcopy.rs  mctrl.rs  mmap.rs  mod.rs  munmap.rs  setegid.rs  seteuid.rs  setgid.rs  setuid.rs  terminate.rs
kernel/src/pm/process/: capability.rs  identity.rs  manager.rs  mod.rs
kernel/src/pm/process/process/: interrupted.rs  mod.rs  runnable.rs  running.rs  state.rs  suspended.rs  zombie.rs
kernel/src/pm/sync/: condvar.rs  mod.rs  mutex.rs  semaphore.rs
kernel/src/pm/thread/: mod.rs
nvx/: Cargo.toml  README.md
nvx/.cargo/: config.toml
nvx/src/: debug.rs  event.rs  ipc.rs  lib.rs  logging.rs  mm.rs  panic.rs  pm.rs
nvx/src/ipc/: message.rs  mod.rs
nvx/src/pm/: message.rs  mod.rs  shutdown.rs
nvx/src/pm/message/: lookup.rs  message.rs  mod.rs  shutdown.rs  signup.rs
nvx/src/pm/syscall/: lookup.rs  mod.rs  shutdown.rs  signup.rs
src/benchmarks/linux-app/: Cargo.toml  Makefile
src/benchmarks/linux-app/src/: main.rs
src/daemons/linuxd/: Cargo.toml  Makefile
src/daemons/linuxd/src/: args.rs  fcntl.rs  main.rs  time.rs  unistd.rs  venv.rs
src/daemons/memd/: Cargo.toml  Makefile
src/daemons/memd/src/: main.rs
src/daemons/wasmd/: Cargo.toml  Makefile  build
src/daemons/wasmd/src/: lib.rs  main.rs
src/gateway/: Cargo.toml
src/gateway/examples/echo/: args.rs  config.rs  logging.rs  main.rs
src/gateway/src/: client.rs  gateway.rs  lib.rs  route.rs
src/libs/linuxd/: Cargo.toml  Makefile
src/libs/linuxd/src/: lib.rs
src/libs/linuxd/src/fcntl/: mod.rs
src/libs/linuxd/src/fcntl/message/: mod.rs  openat.rs  renameat.rs  unlinkat.rs
src/libs/linuxd/src/fcntl/syscall/: mod.rs  openat.rs  renameat.rs  unlinkat.rs
src/libs/linuxd/src/limits/: mod.rs
src/libs/linuxd/src/sys/: mod.rs
src/libs/linuxd/src/sys/stat/: mod.rs
src/libs/linuxd/src/sys/types/: mod.rs
src/libs/linuxd/src/time/: mod.rs
src/libs/linuxd/src/time/message/: clock_getres.rs  clock_gettime.rs  mod.rs
src/libs/linuxd/src/time/syscall/: clock_getres.rs  mod.rs  (+1 more)
src/libs/linuxd/src/unistd/: mod.rs
src/nvx/: .gitignore  Cargo.toml  LICENSE.txt  README.md  rustfmt.toml
src/nvx/src/: event.rs  lib.rs  logging.rs
src/nvx/src/ipc/: mod.rs
src/nvx/src/mm/: allocator.rs  mod.rs
src/nvx/src/pm/: mod.rs
src/nvx/src/pm/message/: lookup.rs  mod.rs  signup.rs
src/nvx/src/pm/syscall/: signup.rs
src/utils/echo-client/: Cargo.toml  Makefile
src/utils/echo-client/src/: args.rs  main.rs
src/utils/loader/: Cargo.toml  Makefile
src/utils/loader/src/: args.rs  main.rs
(+1361 files in other folders)
