# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "arch"
version = "0.0.1"
license-file = "LICENSE.txt"
edition = "2021"
authors = ["The Maintainers of Nanvix"]
description = "Architecture-Specific Interface"
homepage = "https://github.com/nanvix"

[lib]
crate-type = ["lib"]
