# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "nvx"
version = "0.0.1"
license-file = "LICENSE.txt"
edition = "2021"
authors = ["The Maintainers of Nanvix"]
description = "Nanvix System Library"
homepage = "https://github.com/nanvix"

[lib]
crate-type = ["lib"]

[dependencies]
kcall = { git = "https://github.com/nanvix/kcall", branch = "releases/v0.0.2" }
sys = { git = "https://github.com/nanvix/sys", branch = "releases/v1.1.0" }
