# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "nvx"
version = "0.0.1"
license-file = "LICENSE.txt"
edition = "2021"
authors = ["The Maintainers of Nanvix"]
description = "Nanvix System Library"
homepage = "https://github.com/nanvix"

[lib]
crate-type = ["lib"]

[dependencies]
error = { git = "https://github.com/nanvix/error", branch = "releases/v0.0.2" }
kcall = { git = "https://github.com/nanvix/kcall", branch = "releases/v2.0.2" }
allocator = { git = "https://github.com/nanvix/allocator", branch = "releases/v0.0.2" }

[features]
default = ["slab-allocator"]
slab-allocator = []
