# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "init"
version = "0.0.1"
license-file = "LICENSE.txt"
edition = "2021"
authors = ["The Maintainers of Nanvix"]
description = "Init Daemon"
homepage = "https://github.com/nanvix"

[lib]
crate-type = ["staticlib"]

[dependencies]
nvx = { path = "../../nvx" }
