# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "procd"
version = "0.0.1"
license-file = "LICENSE.txt"
edition = "2021"
authors = ["The Maintainers of Nanvix"]
description = "Process Management Daemon"
homepage = "https://github.com/nanvix"

[[bin]]
name = "procd"

[dependencies]
error = { git = "https://github.com/nanvix/error", branch = "releases/v0.0.2" }
nvx = { path = "../../nvx", features = ["slab-allocator"] }
