# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "procd"
version = "0.0.5"
license-file = "LICENSE.txt"
edition = "2021"
authors = ["The Maintainers of Nanvix"]
description = "Process Management Daemon"
homepage = "https://github.com/nanvix"

[[bin]]
name = "procd"

[dependencies]
error = { git = "https://github.com/nanvix/error", branch = "releases/v0.0.5" }
nvx = { git = "https://github.com/nanvix/nvx", branch = "releases/v0.3.1", features = [
    "slab-allocator",
] }

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = "fat"
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
