# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "testd"
version = "0.0.1"
license-file = "LICENSE.txt"
edition = "2021"
authors = ["The Maintainers of Nanvix"]
description = "Test Daemon"
homepage = "https://github.com/nanvix"

[[bin]]
name = "testd"

[dependencies]
nvx = { path = "../../nvx" }

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = "fat"
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
