# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "gateway"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
flexi_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
kernel = { workspace = true }
hyper = { version = "1.4.1", features = ["full"] }
tokio = { workspace = true }
http-body-util = "0.1.2"
hyper-util = { version = "0.1.9", features = ["full"] }
