# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "nvx"
version = "0.4.4"
license-file = "LICENSE.txt"
edition = "2021"
authors = ["The Maintainers of Nanvix"]
description = "Nanvix Runtime Library"
homepage = "https://github.com/nanvix"

[lib]
crate-type = ["lib"]

[dependencies]
kernel = { path = "../kernel", default-features = false, features = ["kcall"] }
talc = "4.4.1"
spin = "0.9.8"

[features]
default = ["allocator"]
allocator = []

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = "fat"
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
