# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "memd"
version = "0.0.8"
license-file = "LICENSE.txt"
edition = "2021"
authors = ["The Maintainers of Nanvix"]
description = "Memory Management Daemon"
homepage = "https://github.com/nanvix"

[[bin]]
name = "memd"

[dependencies]
nvx = { path = "../../nvx" }

[build-dependencies]
cc = "1.1.24"
cfg-if = "1.0.0"

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = "fat"
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
