# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "linuxd-lib"
version = "0.3.0"
license-file = "LICENSE.txt"
edition = "2021"
authors = ["The Maintainers of Nanvix"]
description = "Linux Daemon Library"
homepage = "https://github.com/nanvix"

[lib]
crate-type = ["lib"]

[dependencies]
nvx = { path = "../../nvx", default-features = false }
cfg-if = "1.0.0"
num_enum = { version = "0.7.3", default-features = false }

[features]
default = []
syscall = []

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = "fat"
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
