# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT license.

[package]
name = "echo-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
histogram = "0.11.0"
flexi_logger = "0.29.1"
log = "0.4.22"
core_affinity = "0.8.1"
