# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "loader"
version = "0.1.0"
edition = "2021"

[dependencies]
nvx = { path = "../../nvx", default-features = false }
wasmd = { path = "../../daemons/wasmd" }
anyhow = "1.0.89"
log = "0.4.22"
flexi_logger = "0.28.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
